--- a/default.hbs
+++ b/default.hbs
@@ -33,7 +33,6 @@
                     <a href="{{@site.url}}">Latest Posts</a>
                     {{#if @site.facebook}}<a href="{{facebook_url @site.facebook}}" target="_blank" rel="noopener">Facebook</a>{{/if}}
                     {{#if @site.twitter}}<a href="{{twitter_url @site.twitter}}" target="_blank" rel="noopener">Twitter</a>{{/if}}
-                    <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a>
                 </nav>
             </div>
         </footer>
@@ -48,26 +47,26 @@
     </div>
 
     <div id="subscribe" class="subscribe-overlay">
-        <a class="subscribe-close-overlay" href="#"></a>
-        <a class="subscribe-close-button" href="#"></a>
+        <a class="subscribe-close" href="#"></a>
         <div class="subscribe-overlay-content">
             {{#if @site.logo}}
                 <img class="subscribe-overlay-logo" src="{{@site.logo}}" alt="{{@site.title}}" />
             {{/if}}
             <div class="subscribe-form">
-                <h1 class="subscribe-overlay-title">Subscribe to {{@site.title}}</h1>
-                <p class="subscribe-overlay-description">Stay up to date! Get all the latest & greatest posts delivered straight to your inbox</p>
+                <h1 class="subscribe-overlay-title">Interested in  {{@site.title}}</h1>
+                <p class="subscribe-overlay-description">Do you know a psychologist or diabetic expert who can help us?
+         Enter your email we will contact you.</p>
                 <form data-members-form="subscribe">
                     <div class="form-group">
                         <input class="subscribe-email" data-members-email placeholder="youremail@example.com"
                             autocomplete="false" />
                         <button class="button primary" type="submit">
-                            <span class="button-content">Subscribe</span>
+                            <span class="button-content">Submit</span>
                             <span class="button-loader">{{> "icons/loader"}}</span>
                         </button>
                     </div>
                     <div class="message-success">
-                        <strong>Great!</strong> Check your inbox and click the link to confirm your subscription.
+                        <strong>Great!</strong> Check your inbox and click the link to confirm your email.
                     </div>
                     <div class="message-error">
                         Please enter a valid email address!
